repo/apps/common/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-adguard
  namespace: adguard-home
spec:
  rules:
  - host: "adguard.${domain}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adguard-home-web
            port:
              number: 80
  ingressClassName: nginx
